--- a/src/scss/component/_modal.scss
+++ b/src/scss/component/_modal.scss
@@ -125,8 +125,6 @@
         }
       }
       h5 {
-        overflow-wrap: break-word;
-        word-wrap: break-word;
         padding-left: 6px;
       }
     }
